# instance-forge

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
src/instance-forge/: __main__.py  center.py  dataloader.py  instance.py  instanceconfig.py  job.py  machine.py  notes.txt  operation.py  schedulingfield.py
tests/: test_init.py
