[project]
name = "instance-forge"
requires-python = ">=3.13"
description = "A framework with instances and solvers for common scheduling problems."
readme = "README.md"
authors = [{name = "Simon M. 0ab2bcf6", email = "simonm96@gmx.de"}]
classifiers = [
    "License :: OSI Approved :: 2BSD",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13"
]

version = "0.0.1"

license = {file = "LICENSE.txt"}

keywords = ["template", "development"]

dependencies = [
    "numpy",  # provides additional typing-stubs for numpy etc.
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pylint",
    "flake8",
    "pytest"
]

# build system
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# data, which should be included into the package must be listed here
[tool.setuptools]
package-data = {"*" = ["py.typed", "README.md", "LICENSE.txt", "*.pyi"]}

# mypy settings

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
follow_imports_for_stubs = true
warn_redundant_casts = true
strict = true
warn_unused_ignores = false

# pylint settings

[tool.pylint.MASTER]
fail-under = 9.0

[tool.pylint.BASIC]
good-names = ["i", "j", "k", "_", "e", "f", "n", "N", "m",
              "M", "q", "C", "A", "R", "d"]
good-names-rgxs = "_?[xXyYzZ]\\d?_?"

[tool.pylint.DESIGN]
max-args = "8"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "not-an-iterable"
]

# flake8 settings
# flake8 is not actually supported yet, but will soon be
[tool.flake8]
extend-exclude = [
    ".git",
    ".gitignore",
    "*.pot",
    "*.py[co]",
    "__pycache__",
    "venv",
    ".env"
]
